--- a/offline.html
+++ b/offline.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<header><h1>My Offline Page - version 2 - PLEASEEEE</h1></header>
+<header><h1>My Offline Page - version 4 - PLEASEEEE Please</h1></header>
 <div id="container">
 
 <img src="dino.png" alt="Dinosaur" />
