new version with geo location

--- a/first.html
+++ b/first.html
@@ -92,6 +92,7 @@
       </main>
     </div>
        <script src="material.js"></script>
+      <script src="scripts.js"></script> 
       
   </body>
 </html>
